--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+spring.application.name=GeekText
+server.port=8080
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql//mysql-geek-fiu-9406.a.aivencloud.com:11330/defaultdb
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_9hiANV5CM_a-5Z038Bu
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/geektext
+spring.datasource.username=root
+spring.datasource.password=Myfiuid6379047
