--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/geektext
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Myfiuid6379047
