--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+spring.application.name=GeekText
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/geektext
 spring.datasource.username=root
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
